# OCR-data-preparation-pipeline

./: pyproject.toml  requirements.txt
src/OCR-data-preaparation-pipeline/: Models.py  Service.py  pipeline.py  utils.py
src/image-orientation-labeler/: README.md  app.py
